--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@types/node": "^15.12.4",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.34",
+    "uuid": "^8.3.2"
   }
 }
